# mlflow-local-setup

./: README.md  docker-compose.yaml
.envs/: .env  .postgres
experiments/: Dockerfile  pyproject.toml
mlflow/: Dockerfile
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2840  pg_internal.init
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16388  16389  16395  16396  16398  16420  16449  16452  16460  16495  16496  16515  16526  16539  16540  16558  16570  16579  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  (+17 more)
postgres-data/base/4/: 2619
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
